// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be able to ignore resolution 2`] = `
[
  "[arethetypeswrong] test-untyped-resolution v0.0.0

 (ignoring resolutions: 'node16-cjs', 'node16-esm')

❌ Import resolved to JavaScript files, but no type declarations were found. https://github.com/arethetypeswrong/arethetypeswrong.github.io/blob/main/docs/problems/UntypedResolution.md


┌───────────────────┬───────────────────────────┐
│                   │ "test-untyped-resolution" │
├───────────────────┼───────────────────────────┤
│ node10            │ 🟢                        │
├───────────────────┼───────────────────────────┤
│ bundler           │ ❌ No types               │
├───────────────────┼───────────────────────────┤
│ node16 (from CJS) │ (ignored) ❌ No types     │
├───────────────────┼───────────────────────────┤
│ node16 (from ESM) │ (ignored) ❌ No types     │
└───────────────────┴───────────────────────────┘",
]
`;

exports[`should be able to ignore rule untyped-resolution 1`] = `
[
  "[arethetypeswrong] test-untyped-resolution v0.0.0

 (ignoring rules: 'untyped-resolution')

 No problems found 🌟
┌───────────────────┬───────────────────────────┐
│                   │ "test-untyped-resolution" │
├───────────────────┼───────────────────────────┤
│ node10            │ 🟢                        │
├───────────────────┼───────────────────────────┤
│ node16 (from CJS) │ 🟢 (CJS)                  │
├───────────────────┼───────────────────────────┤
│ node16 (from ESM) │ 🟢 (ESM)                  │
├───────────────────┼───────────────────────────┤
│ bundler           │ 🟢                        │
└───────────────────┴───────────────────────────┘",
]
`;

exports[`should pass when all thrown resolution is disabled 1`] = `
[
  "[arethetypeswrong] test-untyped-resolution v0.0.0

 (ignoring resolutions: 'bundler', 'node16-cjs', 'node16-esm')

(ignored per resolution) ❌ Import resolved to JavaScript files, but no type declarations were found. https://github.com/arethetypeswrong/arethetypeswrong.github.io/blob/main/docs/problems/UntypedResolution.md


┌───────────────────┬───────────────────────────┐
│                   │ "test-untyped-resolution" │
├───────────────────┼───────────────────────────┤
│ node10            │ 🟢                        │
├───────────────────┼───────────────────────────┤
│ node16 (from CJS) │ (ignored) ❌ No types     │
├───────────────────┼───────────────────────────┤
│ node16 (from ESM) │ (ignored) ❌ No types     │
├───────────────────┼───────────────────────────┤
│ bundler           │ (ignored) ❌ No types     │
└───────────────────┴───────────────────────────┘",
]
`;

exports[`should throw when does resolve to types 2`] = `
[
  "[arethetypeswrong] test-untyped-resolution v0.0.0

❌ Import resolved to JavaScript files, but no type declarations were found. https://github.com/arethetypeswrong/arethetypeswrong.github.io/blob/main/docs/problems/UntypedResolution.md


┌───────────────────┬───────────────────────────┐
│                   │ "test-untyped-resolution" │
├───────────────────┼───────────────────────────┤
│ node10            │ 🟢                        │
├───────────────────┼───────────────────────────┤
│ node16 (from CJS) │ ❌ No types               │
├───────────────────┼───────────────────────────┤
│ node16 (from ESM) │ ❌ No types               │
├───────────────────┼───────────────────────────┤
│ bundler           │ ❌ No types               │
└───────────────────┴───────────────────────────┘",
]
`;
